Fixed screenshot section on mobile devices

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -195,4 +195,10 @@ section:last-child {
     margin: 16px 0;
     display: block;
   }
+
+  #features .screenshots {
+    max-width: 100%;
+    width: 100%;
+    margin: 24px;
+  }
 }
